--- a/src/vs/workbench/contrib/terminal/browser/media/xterm.css
+++ b/src/vs/workbench/contrib/terminal/browser/media/xterm.css
@@ -62,7 +62,7 @@
 }
 
 .xterm .xterm-helper-textarea {
-	padding: 0;
+/* 	padding: 0; */
 	border: 0;
 	margin: 0;
 	/* Move textarea out of the screen to the far left, so that the cursor is not visible */
