Update padding for notebook toolbar & folding icon

--- a/src/vs/workbench/contrib/notebook/browser/media/notebook.css
+++ b/src/vs/workbench/contrib/notebook/browser/media/notebook.css
@@ -14,7 +14,7 @@
 .monaco-workbench .notebookOverlay .notebook-top-toolbar {
 	width: 100%;
 	display: inline-flex;
-	padding-left: 20px;
+	padding-left: 8px;
 	margin-top: 4px;
 }
 
@@ -874,7 +874,7 @@
 .monaco-workbench .notebookOverlay > .cell-list-container .notebook-folding-indicator .codicon {
 	visibility: visible;
 	height: 16px;
-	padding: 4px;
+	padding: 4px 4px 4px 6px;
 }
 
 /** Theming */
