allow wt description in widget cleanup widget

--- a/src/vs/workbench/contrib/workspace/browser/workspaceTrustEditor.css
+++ b/src/vs/workbench/contrib/workspace/browser/workspaceTrustEditor.css
@@ -116,12 +116,10 @@
 }
 
 .workspace-trust-editor .extensions-grid-view > .extension-container {
-	width: 310px;
 	margin: 0 10px 20px 0;
 }
 
 .workspace-trust-editor .extensions-grid-view .extension-list-item {
-	padding-left: 0;
 	cursor: default;
 }
 
@@ -139,6 +137,10 @@
 	flex-grow: 0;
 }
 
+.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .footer > .monaco-action-bar {
+	display: none;
+}
+
 .workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .header-container > .header > .version,
 .workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .header-container > .header > .ratings,
 .workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .header-container > .header > .install-count {
@@ -151,11 +153,11 @@
 }
 
 .workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .description {
-	display: -webkit-box;
-	-webkit-box-orient: vertical;
-	-webkit-line-clamp: 3;
-	flex-grow: 1;
-	white-space: break-spaces;
+	display: none;
+}
+
+.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .workspace-trust-description {
+	display: flex;
 }
 
 
