--- a/src/vs/workbench/contrib/workspace/browser/workspaceTrustEditor.css
+++ b/src/vs/workbench/contrib/workspace/browser/workspaceTrustEditor.css
@@ -116,12 +116,11 @@
 }
 
 .workspace-trust-editor .extensions-grid-view > .extension-container {
-	width: 310px;
+	width: 470px;
 	margin: 0 10px 20px 0;
 }
 
 .workspace-trust-editor .extensions-grid-view .extension-list-item {
-	padding-left: 0;
 	cursor: default;
 }
 
@@ -151,6 +150,10 @@
 }
 
 .workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .description {
+	display: none;
+}
+
+.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .workspace-trust-description {
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
 	-webkit-line-clamp: 3;
