wip: better action hover feedback

--- a/src/vs/workbench/browser/parts/editor/media/titlecontrol.css
+++ b/src/vs/workbench/browser/parts/editor/media/titlecontrol.css
@@ -37,7 +37,7 @@
 
 /* Title Actions */
 
-.monaco-workbench .part.editor > .content .editor-group-container > .title .title-actions .action-label:not(span),
+/* .monaco-workbench .part.editor > .content .editor-group-container > .title .title-actions .action-label:not(span),
 .monaco-workbench .part.editor > .content .editor-group-container > .title .editor-actions .action-label:not(span) {
 	display: flex;
 	height: 35px;
@@ -66,7 +66,7 @@
 .monaco-workbench .part.editor > .content .editor-group-container > .title .title-actions .action-label.disabled,
 .monaco-workbench .part.editor > .content .editor-group-container > .title .editor-actions .action-label.disabled {
 	opacity: 0.4;
-}
+} */
 
 /* Drag and Drop */
 
