--- a/src/vs/workbench/contrib/search/browser/media/searchview.css
+++ b/src/vs/workbench/contrib/search/browser/media/searchview.css
@@ -100,22 +100,8 @@
 }
 
 .search-view .search-widget .replace-container .monaco-action-bar {
-	margin-left: 0;
-}
-
-.search-view .search-widget .replace-container .monaco-action-bar {
 	height: 25px;
-}
-
-.search-view .search-widget .replace-container .monaco-action-bar .action-item .codicon {
-	background-repeat: no-repeat;
-	width: 25px;
-	height: 25px;
-	margin-right: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	color: inherit;
+	margin-left: 4px;
 }
 
 .search-view .query-details {
