--- a/src/vs/workbench/contrib/notebook/browser/media/notebook.css
+++ b/src/vs/workbench/contrib/notebook/browser/media/notebook.css
@@ -648,10 +648,11 @@
 	align-items: center;
 	justify-content: center;
 	z-index: 28; /* over the focus outline on the editor, below the title toolbar */
-	width: 100%;
+	width: calc(100% - 32px);
 	opacity: 0;
 	transition: opacity 0.2s ease-in-out;
 	padding: 0;
+	margin: 0 16px 0 16px;
 }
 
 .monaco-workbench .notebookOverlay > .cell-list-container > .monaco-list > .monaco-scrollable-element > .monaco-list-rows > .monaco-list-row.cell-drag-image .cell-bottom-toolbar-container {
