extension view: CSS layout tweaks

--- a/src/vs/workbench/contrib/extensions/browser/media/extensionEditor.css
+++ b/src/vs/workbench/contrib/extensions/browser/media/extensionEditor.css
@@ -154,6 +154,8 @@
 
 .extension-editor > .header > .details > .actions > .monaco-action-bar > .actions-container > .action-item {
 	margin-right: 0;
+	overflow: hidden;
+	flex-shrink: 0;
 }
 
 .extension-editor > .header > .details > .actions > .monaco-action-bar > .actions-container > .action-item .extension-action:not(.manage) {
