--- a/src/vs/workbench/contrib/extensions/browser/media/extensionEditor.css
+++ b/src/vs/workbench/contrib/extensions/browser/media/extensionEditor.css
@@ -158,6 +158,10 @@
 	flex-shrink: 0;
 }
 
+.extension-editor > .header > .details > .actions > .monaco-action-bar > .actions-container > .action-item.disabled {
+	min-width: 0;
+}
+
 .extension-editor > .header > .details > .actions > .monaco-action-bar > .actions-container > .action-item .extension-action:not(.manage) {
 	margin-top: 0px; /* overrides from extension actions */
 	border-radius: 0;
