--- a/src/vs/workbench/contrib/notebook/browser/media/notebook.css
+++ b/src/vs/workbench/contrib/notebook/browser/media/notebook.css
@@ -923,6 +923,7 @@
 	height: 16px !important;
 	margin: 5px 4px !important;
 	cursor: none;
+	min-width: 1px;
 }
 
 .monaco-workbench .notebookOverlay .monaco-list .monaco-list-row .cell-decoration {
