--- a/src/vs/base/parts/quickinput/browser/media/quickInput.css
+++ b/src/vs/base/parts/quickinput/browser/media/quickInput.css
@@ -260,10 +260,8 @@
 }
 
 .quick-input-list .quick-input-list-entry-action-bar .action-label.codicon {
-	margin: 0;
-	height: 100%;
-	padding: 0 2px;
-	vertical-align: middle;
+	margin-right: 4px;
+	padding: 2px;
 }
 
 .quick-input-list .quick-input-list-entry-action-bar {
@@ -272,10 +270,6 @@
 
 .quick-input-list .quick-input-list-entry-action-bar {
 	margin-right: 4px; /* separate from scrollbar */
-}
-
-.quick-input-list .quick-input-list-entry-action-bar .action-label.codicon {
-	margin-right: 4px; /* separate actions */
 }
 
 .quick-input-list .quick-input-list-entry .quick-input-list-entry-action-bar .action-label.always-visible,
