Add ctrl+click message to address cell in ports view Part of microsoft/vscode-remote-release#4826

--- a/src/vs/workbench/contrib/remote/browser/media/tunnelView.css
+++ b/src/vs/workbench/contrib/remote/browser/media/tunnelView.css
@@ -31,6 +31,7 @@
 	text-overflow: ellipsis;
 	overflow: hidden;
 	flex-wrap: nowrap;
+	height: 22px;
 }
 
 .ports-view .monaco-list .monaco-list-row .ports-view-actionbar-cell .monaco-inputbox {
