Add hover underline to port address Part of microsoft/vscode-remote-release#4826

--- a/src/vs/workbench/contrib/remote/browser/media/tunnelView.css
+++ b/src/vs/workbench/contrib/remote/browser/media/tunnelView.css
@@ -44,6 +44,10 @@
 	margin-top: -40px;
 }
 
+.ports-view .monaco-list .monaco-list-row .ports-view-actionbar-cell .ports-view-actionbar-cell-localaddress:hover {
+	text-decoration: underline;
+}
+
 .ports-view .monaco-table-th {
 	padding-left: 10px;
 }
