Fix split json editor underline Fix #120876

--- a/src/vs/workbench/contrib/preferences/browser/media/preferences.css
+++ b/src/vs/workbench/contrib/preferences/browser/media/preferences.css
@@ -51,6 +51,8 @@
 
 .settings-tabs-widget > .monaco-action-bar .action-item .action-label {
 	display: block;
+	border-radius: initial;
+	background: none !important;
 }
 
 .settings-tabs-widget > .monaco-action-bar .action-item .action-label.folder-settings {
