remember split across sessions and set sane default

--- a/src/vs/workbench/contrib/terminal/browser/media/terminal.css
+++ b/src/vs/workbench/contrib/terminal/browser/media/terminal.css
@@ -204,3 +204,7 @@
 .monaco-workbench .tabs-widget .codicon {
 	vertical-align: text-bottom;
 }
+
+.monaco-tl-twistie {
+	display: none !important;
+}
