--- a/src/vs/workbench/contrib/workspace/browser/workspaceTrustEditor.css
+++ b/src/vs/workbench/contrib/workspace/browser/workspaceTrustEditor.css
@@ -17,6 +17,10 @@
 	height: calc(100% - 11px);
 }
 
+.workspace-trust-editor:focus {
+	outline: none !important;
+}
+
 .workspace-trust-editor > .workspace-trust-header {
 	padding: 14px;
 	display: flex;
@@ -176,6 +180,10 @@
 	outline-offset: 2px !important;
 }
 
+.workspace-trust-editor .workspace-trust-features .workspace-trust-buttons-row .workspace-trust-buttons .monaco-button-dropdown {
+	padding: 0 2px;
+}
+
 .workspace-trust-editor .workspace-trust-features .workspace-trust-buttons-row .workspace-trust-buttons .monaco-button-dropdown .monaco-button {
 	margin-left: 1px;
 	margin-right: 1px;
@@ -185,101 +193,9 @@
 	padding: 5px 0px;
 }
 
-.workspace-trust-editor .workspace-trust-features  .workspace-trust-extensions-list {
-	padding-bottom: 10px;
-}
-
-.workspace-trust-editor .workspace-trust-features  .workspace-trust-extensions-list .monaco-scrollable-element.hidden{
-	display: none;
-}
-
-.workspace-trust-editor .workspace-trust-features  .workspace-trust-extension-list-title {
-	font-size: 16px;
-	font-weight: 600;
-	line-height: 32px;
-}
-
-
-.workspace-trust-editor .workspace-trust-features  .workspace-trust-extension-list-description {
-	padding-bottom: 15px;
-}
-
 .workspace-trust-limitations {
 	width: 50%;
 	max-width: 350px;
-}
-
-
-.workspace-trust-editor .extensions-grid-view {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.workspace-trust-editor .extensions-grid-view > .extension-container {
-	width: 470px;
-	margin: 0 10px 20px 0;
-}
-
-.workspace-trust-editor .extensions-grid-view .extension-list-item {
-	cursor: default;
-}
-
-.workspace-trust-editor .extensions-grid-view .extension-list-item > .details {
-	display: flex;
-	flex-direction: column;
-}
-
-.workspace-trust-editor .extensions-grid-view .extension-list-item > .details .header > .name {
-	cursor: pointer;
-}
-
-.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .footer,
-.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .header-container {
-	flex-grow: 0;
-}
-
-.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .header-container > .header > .version,
-.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .header-container > .header > .ratings,
-.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .header-container > .header > .install-count {
-	display: none;
-}
-
-.workspace-trust-editor .extensions-grid-view > .extension-container:focus > .extension-list-item > .details .header > .name,
-.workspace-trust-editor .extensions-grid-view > .extension-container:focus > .extension-list-item > .details .header > .name:hover {
-	text-decoration: underline;
-}
-
-.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .description {
-	display: none;
-}
-
-.workspace-trust-editor .extensions-grid-view .extension-list-item > .details > .workspace-trust-description {
-	display: -webkit-box;
-	-webkit-box-orient: vertical;
-	-webkit-line-clamp: 3;
-	flex-grow: 1;
-	white-space: break-spaces;
-}
-
-
-.workspace-trust-editor .workspace-trust-features  .workspace-trust-extension-list-entry {
-	display: flex;
-	margin-bottom: 10px;
-	align-items: center;
-}
-
-.workspace-trust-editor .workspace-trust-features  .workspace-trust-extension-list-entry .workspace-trust-extension-text {
-	display: flex;
-	flex-direction: column;
-	margin-left: 5px;
-}
-.workspace-trust-editor .workspace-trust-features  .workspace-trust-extension-list-entry .workspace-trust-extension-icon,
-.workspace-trust-editor .workspace-trust-features  .workspace-trust-extension-list-entry .workspace-trust-extension-icon .icon {
-	height: 42px;
-}
-
-.workspace-trust-editor .workspace-trust-features  .workspace-trust-extension-list-entry .workspace-trust-extension-name {
-	font-weight: 600;
 }
 
 /** Settings */
