--- a/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
+++ b/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
@@ -10,7 +10,6 @@
 
 .monaco-workbench .part.editor > .content .gettingStartedContainer {
 	box-sizing: border-box;
-	padding: 10px 20px;
 	line-height: 22px;
 	position: relative;
 	overflow: hidden;
@@ -28,6 +27,10 @@
 
 .monaco-workbench .part.editor > .content .gettingStartedContainer {
 	font-size: 13px;
+}
+
+.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStarted {
+	height: 100%;
 }
 
 .monaco-workbench .part.editor > .content .gettingStartedContainer h1 {
@@ -71,7 +74,7 @@
 .monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlide {
 	width: 100%;
 	height: 100%;
-	padding: 8px;
+	padding: 12px;
 	position: absolute;
 	box-sizing: border-box;
 	left: 0;
@@ -88,7 +91,7 @@
 	height: 100%;
 	max-width: 800px;
 	margin: 0 auto;
-	grid-template-rows: 25% auto min-content;
+	grid-template-rows: 25% minmax(min-content, auto) min-content;
 	grid-template-columns: 1fr 1fr;
 	grid-template-areas:
 	"header header"
@@ -98,7 +101,7 @@
 }
 
 .monaco-workbench .part.editor > .content .gettingStartedContainer.width-constrained .gettingStartedSlideCategories > .gettingStartedCategoriesContainer {
-	grid-template-rows: 25% min-content auto min-content;
+	grid-template-rows: auto min-content minmax(min-content, auto) min-content;
 	grid-template-columns: 1fr;
 	grid-template-areas:
 	"header"
@@ -109,8 +112,9 @@
 }
 
 .monaco-workbench .part.editor > .content .gettingStartedContainer.height-constrained .gettingStartedSlideCategories > .gettingStartedCategoriesContainer {
-	grid-template-rows: auto min-content;
+	grid-template-rows: auto minmax(min-content, auto) min-content;
 	grid-template-areas:
+	"header"
 	"left-column right-column"
 	"footer footer"
 ;
@@ -118,7 +122,7 @@
 
 
 .monaco-workbench .part.editor > .content .gettingStartedContainer.height-constrained.width-constrained .gettingStartedSlideCategories > .gettingStartedCategoriesContainer {
-	grid-template-rows: min-content auto min-content;
+	grid-template-rows: min-content minmax(min-content, auto) min-content;
 	grid-template-columns: 1fr;
 	grid-template-areas:
 	"left-column"
@@ -127,6 +131,7 @@
 ;
 }
 
+.monaco-workbench .part.editor > .content .gettingStartedContainer.width-constrained .gettingStartedSlideCategories > .gettingStartedCategoriesContainer > .header,
 .monaco-workbench .part.editor > .content .gettingStartedContainer.height-constrained .gettingStartedSlideCategories > .gettingStartedCategoriesContainer > .header {
 	display: none;
 }
@@ -378,7 +383,7 @@
 	flex-direction: column;
 }
 
-.monaco-workbench .part.editor > .content .gettingStartedContainer .gettingStartedSlideDetails .full-height-scrollable {
+.monaco-workbench .part.editor > .content .gettingStartedContainer .full-height-scrollable {
 	height: 100%;
 }
 
