--- a/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
+++ b/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
@@ -24,6 +24,7 @@
 	max-width: 100%;
 	max-height: 100%;
 	object-fit: contain;
+	pointer-events: none;
 }
 
 .monaco-workbench .part.editor > .content .gettingStartedContainer {
