get text to show or hide appropriately

--- a/src/vs/workbench/contrib/terminal/browser/media/terminal.css
+++ b/src/vs/workbench/contrib/terminal/browser/media/terminal.css
@@ -222,8 +222,9 @@
 	padding: 2px;
 }
 
-.tabs-widget .monaco-list-row:hover .actions,
-.tabs-widget .monaco-list-row.selected .actions,
-.tabs-widget .monaco-list-row.focused .actions {
+/* .tabs-widget .monaco-list-row.selected .actions, */
+/* .tabs-widget .monaco-list-row.focused .actions */
+.tabs-widget .monaco-list-row:hover .actions
+{
 	display: block;
 }
