--- a/src/vs/workbench/contrib/terminal/browser/media/terminal.css
+++ b/src/vs/workbench/contrib/terminal/browser/media/terminal.css
@@ -240,7 +240,6 @@
 	padding: 2px;
 }
 
-.tabs-widget .monaco-list-row:hover .actions
-{
+.tabs-widget .monaco-list-row:hover .actions {
 	display: block;
 }
