--- a/src/vs/workbench/contrib/terminal/browser/media/terminal.css
+++ b/src/vs/workbench/contrib/terminal/browser/media/terminal.css
@@ -197,22 +197,24 @@
 	padding: 0 22px 0 6px;
 }
 
-#terminal-tabs-plus-button {
-	min-height: 10;
-	flex-grow: 0;
-	text-align: center;
-	z-index: 10;
-}
-
-#terminal-tabs-plus-button.align-left {
-	padding-left: 10px;
-	text-align: left;
-	z-index: 10;
-}
-
 .monaco-workbench .pane-body.integrated-terminal .tabs-container {
+	max-height: 100%;
 	display: flex;
 	flex-direction: column;
+}
+
+.monaco-workbench .pane-body.integrated-terminal .tabs-widget-container {
+	overflow: hidden;
+}
+
+.monaco-workbench .pane-body.integrated-terminal .plus-button {
+	text-align: center;
+	z-index: 10;
+	padding: 4px 10px;
+}
+
+.monaco-workbench .pane-body.integrated-terminal .plus-button.align-left {
+	text-align: left;
 }
 
 .monaco-workbench .pane-body.integrated-terminal .tabs-widget .terminal-tabs-entry {
@@ -224,7 +226,7 @@
 	text-align: left;
 }
 
-.monaco-workbench .pane-body.integrated-terminal  .tabs-widget .codicon {
+.monaco-workbench .pane-body.integrated-terminal .tabs-widget .codicon {
 	vertical-align: text-bottom;
 }
 
